# android-agent

./: .env.production  .env.production.example  .gitignore  AGENTS.md  ANDROID_TESTING_GUIDE.md  API_DOCUMENTATION.md  API_KEYS_REQUIRED.md  APK_BUILD_SUCCESS.md  APK_GENERATION_GUIDE.md  ATAK_FEATURE_ANALYSIS.md  CHANGELOG.md  CLEANUP_PLAN.md  COMPREHENSIVE_TESTING_COMPLETE.md  CONTRIBUTING.md  CRITICAL_PHASE_COMPLETE.md  CURRENT_SESSION_TESTING.md  DATABASE_ARCHITECTURE.md  DEPLOYMENT_ANALYSIS_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY_SUMMARY.md  Dockerfile  FEATURE_IMPLEMENTATION_STATUS.md  FINAL_APK_SUMMARY.md  FINAL_DEPLOYMENT_READY.md  FINAL_TESTING_SUMMARY.md  GITHUB_READY_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  LICENSE  LIVEKIT_STREAMING_COMPLETE.md  MAINTENANCE.md  MILESTONE_ACHIEVEMENT.md  NEXT_SESSION_QUICK_START.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PROJECT_ARCHITECTURE.md  PROJECT_ROADMAP.md  PROJECT_STATUS.md  QUICK_START.md  README.md  (+83 more)
.clinerules/: workspace.rules.md
.kiro/: NEXT_SESSION_GUIDE.md  SESSION_SUMMARY.md
coturn/: turnserver.conf
docs/: README.md
livekit/: livekit.yaml
mcp-server/: tacticalops-mcp-server.js
modern-dashboard/: .env.example  .gitignore  Dockerfile  Dockerfile.production  README.md  SETUP_SUMMARY.md  create-simple-admin.js  docker-entrypoint-simple.sh  docker-entrypoint.sh  healthcheck.sh  next.config.ts  ngrok-setup.js  package-lock.json  package.json  setup-database.js  setup-dev.sh  setup-ngrok.sh  setup-prod.sh  setup-role-based-data.js  (+4 more)
(+314 files in other folders)
