[project]
name = "android-agent"
version = "1.0.0"
description = "Modern PWA Dashboard for Android Device Management"
authors = [
    {name = "Android Agent Team", email = "team@android-agent.dev"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/your-username/android-agent"
Repository = "https://github.com/your-username/android-agent"
Documentation = "https://github.com/your-username/android-agent#readme"
Issues = "https://github.com/your-username/android-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "mypy>=1.0.0",
]

[tool.uv.sources]
# Add any local package sources here if needed

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true